# yt-summary

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  idea.md  package-lock.json  pyproject.toml  trans_resp  transcript1.txt
.github/actions/builder/: action.yml
.github/actions/check-python/: action.yml
.github/actions/test-python/: action.yml
.github/workflows/: build.yml  quality-check.yml  test.yml
migrations/: 001_create_yt_meta.sql
scrap/: dlp.py  pg.py  q.py  scrape_yt.py
src/: __main__.py  a.html  config.py  llm_config.py  main.py
src/api/: router.py
src/api/endpoints/: get_transcript.py
src/cli/: cli.py  errors.py
src/database/: context_manager.py  run_migrations.py
src/database/inserts/: base_insert_models.py  transcript.py
src/embeddings/: models.py
src/extractors/: metadata.py  transcript.py
src/run/: getters.py
src/schemas/: enums.py  exceptions.py  models.py
src/summarisers/: base_summariser.py  simple_summariser.py  templates.py  timestamp_summariser.py
src/summarisors/: base_summariser.py  simple_summariser.py  templates.py  timestamp_summariser.py
src/utils/: async_helpers.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/extractors/: test_metadata.py  test_transcript.py
tests/summarisers/: test_base_summariser.py  test_simple_summariser.py
tests/utils/: test_async_helper.py  test_misc.py
yt_summary/: README.md  __init__.py  __main__.py
yt_summary/cli/: cli.py  errors.py
yt_summary/extractors/: metadata.py  transcript.py
yt_summary/run/: getters.py  runners.py
yt_summary/schemas/: enums.py  models.py
yt_summary/summarisers/: __init__.py  base_summariser.py  simple_summariser.py  templates.py  timestamp_summariser.py
yt_summary/utils/: misc.py
