[project]
name = "yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "llama-index>=0.13.2",
    "llama-index-embeddings-google-genai>=0.3.0",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-vector-stores-postgres>=0.6.3",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.8.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff]
exclude = [
    "tests/",
    "__init__.py",
    ".venv/",
]
line-length = 120
lint.select = [
    "A",
    "B",
    "D",
    "G",
    "I",
    "E",
    "F",
    "ANN",
    "R",
    "S",
    "COM",
    "LOG",
    "BLE",
    "ASYNC",
    "FBT",
    "C4",
    "PIE",
    "T20",
    "Q",

]
lint.ignore = [
  "D107",
  "D203",
  "D213",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"src/api/**.py" = ["B008"]
