[project]
name = "yt-summary"
version = "0.1.0"
description = "A CLI and frontend for summarising YouTube videos using LlamaIndex and FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "llama-index>=0.13.2",
    "llama-index-embeddings-google-genai>=0.3.0",
    "llama-index-llms-anthropic>=0.8.5",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-vector-stores-postgres>=0.6.3",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "types-requests>=2.32.4.20250809",
    "youtube-transcript-api>=1.2.2",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff]
exclude = [
    # "tests/",
    "__init__.py",
    ".venv/",
]
line-length = 120
lint.select = [
    "A",
    "B",
    "D",
    "G",
    "I",
    "E",
    "F",
    "ANN",
    "R",
    "S",
    "COM",
    "LOG",
    "BLE",
    "ASYNC",
    "FBT",
    "C4",
    "PIE",
    "T20",
    "Q",

]
lint.ignore = [
  "D107",
  "D203",
  "D213",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"src/api/**.py" = ["B008"]
"tests/**.py" = ["D", "S", "ANN"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-v",
    "--asyncio-mode=auto",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*__init__*",
    "tests/*",
    "main.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
omit = [
    "*__init__*",
    "tests/*",
    "src/schemas/*",
    "src/api/*",
    "src/run/*",
    "src/database/*",
    "src/embeddings/*",
]
