[project]
name = "yt-summary"
version = "0.1.0"
description = "Youtube Summariser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "llama-index>=0.13.2",
    "llama-index-embeddings-google-genai>=0.3.0",
    "llama-index-llms-anthropic>=0.8.5",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-vector-stores-postgres>=0.6.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "types-requests>=2.32.4.20250809",
    "youtube-transcript-api>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff]
exclude = [
    "tests/",
    "__init__.py",
    ".venv/",
]
line-length = 120
lint.select = [
    "A",
    "B",
    "D",
    "G",
    "I",
    "E",
    "F",
    "ANN",
    "R",
    "S",
    "COM",
    "LOG",
    "BLE",
    "ASYNC",
    "FBT",
    "C4",
    "PIE",
    "T20",
    "Q",

]
lint.ignore = [
  "D107",
  "D203",
  "D213",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"yt_summary/api/**.py" = ["B008"]
"tests/**.py" = ["D", "S", "ANN"]
"yt_summary/cli/**.py" = ["T201"]
"yt_summary/__main__.py" = ["T201"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-v",
    "--asyncio-mode=auto",
]

[tool.coverage.run]
source = ["yt_summary"]
omit = [
    "*__init__*",
    "tests/*",
    "main.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
omit = [
    "*__init__*",
    "*__main__*",
    "tests/*",
    "yt_summary/schemas/*",
    "yt_summary/api/*",
    "yt_summary/run/*",
    "yt_summary/database/*",
    "yt_summary/embeddings/*",
]
